--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <p>(Oh, yes! I've watched a lot of movies and TV series, mostly anime....)</p>
         </div>
     <p>
-        <br>1. Avengers end game 
-        <br>2. Hacksaw ridge 
-        <br>3. Avengers 
+        <br>1. Avengers end game <a href="https://www.google.com/search?gs_ssp=eJzj4tbP1TcwNDJLssguM2D0EkwsS81LTy0qVkjNS1FIT8xNBQCZpgod&q=avengers+end+game&oq=avengers+end+&aqs=chrome.1.69i57j46i512j0i512j0i10i512l5j0i512.5260j0j15&sourceid=chrome&ie=UTF-8">IMDB</a> 
+        <br>2. Hacksaw ridge <a href = "https://www.google.com/search?q=hacksaw+ridge&oq=Hacksaw+ridge&aqs=chrome.0.0i67i355j46i67i512j0i512l4j0i67j0i512l3.922j0j7&sourceid=chrome&ie=UTF-8">IMDB</a>
+        <br>3. Avengers <a href="https://www.google.com/search?q=avengers&oq=ave&aqs=chrome.2.69i59j69i57j69i59j46i67l3j0i512j46i175i199i512j0i512j46i175i199i512.4202j0j7&sourceid=chrome&ie=UTF-8">IMDB</a>
+        
     </p>
         <div><h1>My Moods</h1></div>
         Happy: <img src="happy.jpg"
